AB#1612 Refactor onboarding
Only create a user in the database if they explicitly enroll in ANET.
Change the flow and the messages of the onboarding for clarity.
User activities will only be logged after a user has enrolled.